--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -224,8 +224,9 @@ a{
 	}
 	 
 }
+
 .el-submenu{
-	width: 220px;
+	width: auto;
 	 
 	font-size: 12px;
 	 
@@ -234,11 +235,11 @@ a{
 .el-submenu .el-menu-item{
  
 	font-weight: 100;
-	font-size: 12px !important;
+	//font-size: 12px !important;
 }
  
 .title_menu{
-	font-weight: 700;
+	font-weight: normal;
 }
 
 
@@ -368,7 +369,6 @@ a{
 	.header-left{
 		float: left;
 		height: 100%;
-		width: 220px;
 		&.retract{
 			width: 64px;
 		}
@@ -385,11 +385,12 @@ a{
 	.head-title .item{
 		float: left;
 		height: 100%;
-		line-height: 50px;
+		line-height: 53px;
 
 	}
 	.head-title a.item{
-		font-weight: bold;
+		font-weight: 600;
+		font-size: 20px;
 		margin: 0 10px;
 	}
 	.header-tools .item{
@@ -402,6 +403,7 @@ a{
 		font-size: 18px;
 		cursor: pointer;
 		transition: all .25s;
+		box-sizing: border-box;
 		> span {
 			display: block;
 		} 
@@ -708,6 +710,67 @@ a{
 		&enter,&leave-to{
 			transform: translateY(10px);
   			opacity: 0;
+		}
+	}
+	.yorn-header{
+		box-shadow: 0 0px 4px rgba(109, 97, 97, 0.27);
+	}
+	.yorn-aside{
+		box-shadow: 2px 0 6px rgba(0,21,41,.35)
+	}
+	.yorn-menu,.yorn-aside-width{
+		&.yorn-aside-width-collapse{
+			width: 64px;
+			transition : all .3s;
+		}
+		width: 256px;
+		transition : all .3s;
+		
+	}
+	.yorn-breadcrumb{
+		background:none;
+		border: none;
+		box-shadow: none;
+	}
+
+	.yorn-header{
+		.yorn-header-item{
+			height: 100%;
+			box-sizing: border-box;
+			padding: 0 10px;
+			cursor: pointer;
+			&.item{
+				width: auto;
+			}
+			&:hover {
+				
+			};
+		}
+		.yorn-header-user{
+			width: 100%;
+			line-height: 50px;
+			display: inline-block;
+			span{
+				vertical-align: top;
+			}
+			.yorn-header-avater{
+				border-radius: 50%;
+				width: 25px;
+				height: 25px;
+				margin-right: 5px;
+				margin-top: 12px;
+				display: inline-block;
+				img{
+					display: block;
+					width: 100%;
+					height: 100%;
+					vertical-align: middle;
+				}
+			}
+			.yorn-header-username{
+				font-weight: lighter;
+				font-size: 12px;
+			}
 		}
 	}
 }
