--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -1,6 +1,8 @@
 @charset "UTF-8";
 @import "base";
 @import "theme";
+@import "plugs-yorn-contextmenu";
+
 
 $baseBlue : #619bff;
 $baseGray : #495057;
