--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -325,6 +325,19 @@
           background-color: #16aad8;
           color: #FFFFFF; }
 
+.yorn-contextmenu {
+  position: absolute;
+  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
+  box-sizing: box-sizing;
+  background-color: #FFF;
+  height: 80px;
+  width: 80px;
+  border-radius: 3px;
+  cursor: pointer;
+  left: 0;
+  top: 0;
+  display: block; }
+
 .pull-right {
   float: right; }
   .pull-right:after {
