--- a/src/assets/sass/_plugs-yorn-contextmenu.scss
+++ b/src/assets/sass/_plugs-yorn-contextmenu.scss
@@ -2,14 +2,15 @@
 
 .yorn-contextmenu{
 	position: absolute;
-	box-shadow: 0 0 4px rgba(0,0,0,.2);
-	box-sizing: box-sizing;
+	box-shadow: 0 0 12px rgba(0,0,0,.2);
+	box-sizing: border-box;
 	background-color: #FFF;
-	height: 80px;
-	width: 80px;
+	width: 110px;
 	border-radius: 3px;
-	cursor: pointer;
 	left: 0;
 	top: 0;
 	display: block;
+	z-index: 500;
+	border: 1px solid #cfd7e5;
+	padding: 5px 0;
 }
