--- a/src/assets/sass/index.scss
+++ b/src/assets/sass/index.scss
@@ -14,6 +14,7 @@ $baseRed : #F56C6C;
 $baseGrey : #909399;
 
 
+
 html{
 
 }
@@ -371,11 +372,28 @@ a{
 	width: 100%;
 	height: 50px;
 	background: #FFF;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
 	.header-left{
 		float: left;
 		height: 100%;
 		&.retract{
 			width: 64px;
+		}
+	}
+	.navMenu{
+		flex: 1;
+		.el-menu.el-menu--horizontal{
+			border-bottom: 0;
+			> .el-menu-item{
+				height: 50px;
+				line-height: 50px;
+			}
+			>.el-submenu .el-submenu__title{
+				height: 50px;
+				line-height: 50px;
+			}
 		}
 	}
 	.header-right{
