--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -327,16 +327,17 @@
 
 .yorn-contextmenu {
   position: absolute;
-  box-shadow: 0 0 4px rgba(0, 0, 0, 0.2);
-  box-sizing: box-sizing;
+  box-shadow: 0 0 12px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
   background-color: #FFF;
-  height: 80px;
-  width: 80px;
+  width: 110px;
   border-radius: 3px;
-  cursor: pointer;
   left: 0;
   top: 0;
-  display: block; }
+  display: block;
+  z-index: 500;
+  border: 1px solid #cfd7e5;
+  padding: 5px 0; }
 
 .pull-right {
   float: right; }
@@ -586,12 +587,25 @@ a {
   padding: 0;
   width: 100%;
   height: 50px;
-  background: #FFF; }
+  background: #FFF;
+  display: flex;
+  flex-direction: row;
+  align-items: center; }
   .header .header-left {
     float: left;
     height: 100%; }
     .header .header-left.retract {
       width: 64px; }
+  .header .navMenu {
+    flex: 1; }
+    .header .navMenu .el-menu.el-menu--horizontal {
+      border-bottom: 0; }
+      .header .navMenu .el-menu.el-menu--horizontal > .el-menu-item {
+        height: 50px;
+        line-height: 50px; }
+      .header .navMenu .el-menu.el-menu--horizontal > .el-submenu .el-submenu__title {
+        height: 50px;
+        line-height: 50px; }
   .header .header-right {
     float: right;
     height: 100%;
